Replaced for with enhanced for, got rid of redundant array declarations and collapsed catches. For a more consistent new JAVA experience.